[gd_scene load_steps=15 format=3 uid="uid://d2a640kxl8k78"]

[ext_resource type="Texture2D" uid="uid://d2xehtegfkwrx" path="res://TempAssets/tempblock.png" id="1"]
[ext_resource type="Script" path="res://Scenes/Levels/TestLevel.gd" id="1_g8leq"]
[ext_resource type="PackedScene" uid="uid://dcqev65agksul" path="res://Assets/Actors/Player/TheRat.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://ddb5bbyjfa17x" path="res://Assets/Actors/Enemies/Gooby/Gooby.tscn" id="5"]
[ext_resource type="Script" path="res://Scenes/DebugVals.gd" id="5_wbdo3"]
[ext_resource type="Texture2D" uid="uid://buclkjier0xtc" path="res://TempAssets/tempblock_entrance.png" id="6_ladf6"]
[ext_resource type="Texture2D" uid="uid://dknum4a4kxe2r" path="res://TempAssets/tempblock_exit.png" id="7_gswpv"]
[ext_resource type="Texture2D" uid="uid://d1x6ayfk72nyl" path="res://TempAssets/tempblock_fallthrough.png" id="8_dn01w"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_x367k"]
texture = ExtResource("1")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_k1pnp"]
texture = ExtResource("6_ladf6")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jq02i"]
texture = ExtResource("7_gswpv")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0nsgb"]
texture = ExtResource("8_dn01w")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, -10.5, -32, -11)
0:0/0/physics_layer_0/polygon_0/one_way = true
0:0/0/physics_layer_0/polygon_0/one_way_margin = 10.0

[sub_resource type="TileSet" id="TileSet_ompc5"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_x367k")
sources/1 = SubResource("TileSetAtlasSource_k1pnp")
sources/2 = SubResource("TileSetAtlasSource_jq02i")
sources/3 = SubResource("TileSetAtlasSource_0nsgb")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hp01d"]
size = Vector2(383, 53)

[node name="TestLevel" type="Node2D"]
script = ExtResource("1_g8leq")

[node name="Player" parent="." instance=ExtResource("4")]
position = Vector2(481, 190)

[node name="Camera2D" type="Camera2D" parent="Player"]

[node name="Enemies" type="Node2D" parent="."]

[node name="Gooby" parent="Enemies" instance=ExtResource("5")]
position = Vector2(876, -75)

[node name="Gooby2" parent="Enemies" instance=ExtResource("5")]
position = Vector2(1244, -366)

[node name="Gooby3" parent="Enemies" instance=ExtResource("5")]
position = Vector2(884, -974)

[node name="Gooby4" parent="Enemies" instance=ExtResource("5")]
position = Vector2(3370, -27)

[node name="Gooby5" parent="Enemies" instance=ExtResource("5")]
position = Vector2(2280, -417)

[node name="Gooby6" parent="Enemies" instance=ExtResource("5")]
position = Vector2(1097, 667)

[node name="Gooby7" parent="Enemies" instance=ExtResource("5")]
position = Vector2(1660, 1234)

[node name="Gooby8" parent="Enemies" instance=ExtResource("5")]
position = Vector2(2941, -669)

[node name="Gooby9" parent="Enemies" instance=ExtResource("5")]
position = Vector2(2693, 262)

[node name="Gooby10" parent="Enemies" instance=ExtResource("5")]
position = Vector2(3817, -172)

[node name="Gooby11" parent="Enemies" instance=ExtResource("5")]
position = Vector2(3398, -570)

[node name="Gooby12" parent="Enemies" instance=ExtResource("5")]
position = Vector2(3735, -786)

[node name="Gooby13" parent="Enemies" instance=ExtResource("5")]
position = Vector2(3341, -1095)

[node name="Gooby14" parent="Enemies" instance=ExtResource("5")]
position = Vector2(3811, -1379)

[node name="Gooby15" parent="Enemies" instance=ExtResource("5")]
position = Vector2(1811, -626)

[node name="HUD" type="CanvasLayer" parent="."]

[node name="DebugHUD" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2

[node name="DebugVals" type="VBoxContainer" parent="HUD/DebugHUD"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 254.0
grow_vertical = 2
script = ExtResource("5_wbdo3")

[node name="DEBUG" type="RichTextLabel" parent="HUD/DebugHUD/DebugVals"]
layout_mode = 2
bbcode_enabled = true
text = "[color=red]DEBUG"
fit_content = true

[node name="Health" type="RichTextLabel" parent="HUD/DebugHUD/DebugVals"]
layout_mode = 2
bbcode_enabled = true
text = "[wave]Health:"
fit_content = true

[node name="Combo" type="RichTextLabel" parent="HUD/DebugHUD/DebugVals"]
layout_mode = 2
bbcode_enabled = true
text = "[wave]Combo: 0"
fit_content = true

[node name="ComboTimer" type="RichTextLabel" parent="HUD/DebugHUD/DebugVals"]
layout_mode = 2
bbcode_enabled = true
text = "[wave]Combo Time Left: 0"
fit_content = true

[node name="Timer" type="Timer" parent="HUD/DebugHUD/DebugVals/ComboTimer"]
one_shot = true

[node name="Gold" type="RichTextLabel" parent="HUD/DebugHUD/DebugVals"]
layout_mode = 2
bbcode_enabled = true
text = "[wave]Gold: [color=orange]0"
fit_content = true

[node name="Clip" type="RichTextLabel" parent="HUD/DebugHUD/DebugVals"]
layout_mode = 2
bbcode_enabled = true
text = "[wave]Clip:"
fit_content = true

[node name="ReloadTime" type="RichTextLabel" parent="HUD/DebugHUD/DebugVals"]
layout_mode = 2
bbcode_enabled = true
text = "[wave][color=green]Loaded"
fit_content = true

[node name="Timer" type="Timer" parent="HUD/DebugHUD/DebugVals/ReloadTime"]
one_shot = true

[node name="FireTime" type="RichTextLabel" parent="HUD/DebugHUD/DebugVals"]
layout_mode = 2
bbcode_enabled = true
text = "[wave][color=green]Fireable"
fit_content = true

[node name="Timer" type="Timer" parent="HUD/DebugHUD/DebugVals/FireTime"]
one_shot = true

[node name="Invincible" type="RichTextLabel" parent="HUD/DebugHUD/DebugVals"]
layout_mode = 2
bbcode_enabled = true
text = "[wave][color=red]Invincible: NO"
fit_content = true

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_ompc5")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 589825, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 10, 0, 0, 65546, 0, 0, 131082, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 0, 0, 393226, 0, 0, 458762, 0, 0, 524298, 0, 0, 1, 0, 0, 2, 0, 0, 9, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 393218, 3, 0, 393219, 3, 0, 393220, 3, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, -851956, 0, 0, -851955, 0, 0, -851954, 0, 0, -851953, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 327702, 0, 0, 327703, 0, 0, 327704, 0, 0, 327705, 0, 0, 327706, 0, 0, 327707, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 196634, 0, 0, 196635, 0, 0, 196636, 0, 0, 196637, 0, 0, 196638, 0, 0, 196639, 0, 0, 196640, 0, 0, 196641, 0, 0, 393243, 0, 0, 458779, 0, 0, 524315, 0, 0, 524316, 0, 0, 524317, 0, 0, 524318, 0, 0, 524319, 0, 0, 524320, 0, 0, 524321, 0, 0, 524322, 0, 0, 524323, 0, 0, 524324, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, -655356, 0, 0, -589820, 0, 0, -589819, 0, 0, -589818, 0, 0, -589817, 0, 0, -589816, 0, 0, -589815, 0, 0, -655351, 0, 0, -720887, 0, 0, -786423, 0, 0, -524284, 0, 0, -458748, 0, 0, -458747, 0, 0, -458749, 0, 0, -458746, 0, 0, -393212, 0, 0, -327676, 0, 0, -262114, 0, 0, -262113, 0, 0, -262112, 0, 0, -262111, 0, 0, -196575, 0, 0, -196574, 0, 0, -196573, 0, 0, -196572, 0, 0, -327647, 0, 0, -327648, 0, 0, -327649, 0, 0, -327650, 0, 0, -327651, 0, 0, -327652, 0, 0, -327653, 0, 0, -262110, 0, 0, -196571, 0, 0, -196570, 0, 0, 327730, 0, 0, 327731, 0, 0, 393268, 0, 0, 393269, 0, 0, 393270, 0, 0, 393271, 0, 0, 393272, 0, 0, 393273, 0, 0, 393274, 0, 0, 393275, 0, 0, 393276, 0, 0, 393277, 0, 0, 393278, 0, 0, 393266, 0, 0, 393267, 0, 0, 393264, 0, 0, 393265, 0, 0, 458802, 0, 0, 524338, 0, 0, 589874, 0, 0, 655410, 0, 0, 720946, 0, 0, 786482, 0, 0, 458803, 0, 0, 524339, 0, 0, 589875, 0, 0, 655411, 0, 0, 720947, 0, 0, 786483, 0, 0, 852019, 0, 0, 917555, 0, 0, 983091, 0, 0, 1048627, 0, 0, 1114163, 0, 0, 1179699, 0, 0, 1245235, 0, 0, 917538, 0, 0, 917539, 0, 0, 917540, 0, 0, 917541, 0, 0, 917542, 0, 0, 917543, 0, 0, 983080, 0, 0, 1048616, 0, 0, 1114152, 0, 0, 1179688, 0, 0, 1245224, 0, 0, 1310760, 0, 0, 983079, 0, 0, 1048615, 0, 0, 1114151, 0, 0, 1179687, 0, 0, 1245223, 0, 0, 1310759, 0, 0, 1376295, 0, 0, 1441831, 0, 0, 1507367, 0, 0, 1572903, 0, 0, 1835006, 0, 0, 1835007, 0, 0, 1769472, 0, 0, 1769473, 0, 0, 1769474, 0, 0, 1769475, 0, 0, 1769476, 0, 0, 1769477, 0, 0, 1769478, 0, 0, 1769479, 0, 0, 1769480, 0, 0, 1769481, 0, 0, 1769482, 0, 0, 1769483, 0, 0, 1769484, 0, 0, 1769485, 0, 0, 1769486, 0, 0, 1769487, 0, 0, 1769488, 0, 0, 1769489, 0, 0, 1769490, 0, 0, 1769491, 0, 0, 1769492, 0, 0, 1769493, 0, 0, 1769494, 0, 0, 1769495, 0, 0, 1769496, 0, 0, 1769497, 0, 0, 1835002, 0, 0, 1835003, 0, 0, 1835004, 0, 0, 1835005, 0, 0, 1769498, 0, 0, 1769499, 0, 0, 1769500, 0, 0, 1769501, 0, 0, 1769502, 0, 0, 1769503, 0, 0, 1769504, 0, 0, 1769505, 0, 0, 1769506, 0, 0, 1769507, 0, 0, 1769508, 0, 0, 1769509, 0, 0, 1769510, 0, 0, 1769511, 0, 0, 1769512, 0, 0, 1769513, 0, 0, 1769514, 0, 0, 1769515, 0, 0, 1769516, 0, 0, 1769517, 0, 0, 1769518, 0, 0, 1769519, 0, 0, 1769520, 0, 0, 1769521, 0, 0, 1769522, 0, 0, 1769523, 0, 0, 1769524, 0, 0, 1769525, 0, 0, 1769526, 0, 0, 1769527, 0, 0, 1769528, 0, 0, 1769529, 0, 0, 1769530, 0, 0, 1769531, 0, 0, 1769532, 0, 0, 1769533, 0, 0, 1769534, 0, 0, 1769535, 0, 0, 1769536, 0, 0, 1769537, 0, 0, 1769538, 0, 0, 1769539, 0, 0, 1769540, 0, 0, 1769541, 0, 0, 1769542, 0, 0, 1769543, 0, 0, 1769544, 0, 0, 1769545, 0, 0, 1769546, 0, 0, 1769547, 0, 0, 1769548, 0, 0, 1769549, 0, 0, 1769550, 0, 0, 1769551, 0, 0, 1769552, 0, 0)

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PackedVector2Array(-480, -1, -97, -1, -97, 52, -479, 52)

[node name="StaticBody2D" type="StaticBody2D" parent="Polygon2D"]
position = Vector2(-479, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Polygon2D/StaticBody2D"]
position = Vector2(190.5, 25.5)
shape = SubResource("RectangleShape2D_hp01d")
one_way_collision = true
one_way_collision_margin = 35.9

[connection signal="bullets_in_clip_updated" from="Player" to="HUD/DebugHUD/DebugVals" method="_on_player_bullets_in_clip_updated"]
[connection signal="firing_finished" from="Player" to="HUD/DebugHUD/DebugVals" method="_on_player_firing_finished"]
[connection signal="firing_started" from="Player" to="HUD/DebugHUD/DebugVals" method="_on_player_firing_started"]
[connection signal="health_changed" from="Player" to="HUD/DebugHUD/DebugVals" method="_on_player_health_changed"]
[connection signal="invincibility_finished" from="Player" to="HUD/DebugHUD/DebugVals" method="_on_player_invincibility_finished"]
[connection signal="invincibility_started" from="Player" to="HUD/DebugHUD/DebugVals" method="_on_player_invincibility_started"]
[connection signal="reload_finished" from="Player" to="HUD/DebugHUD/DebugVals" method="_on_player_reload_finished"]
[connection signal="reload_started" from="Player" to="HUD/DebugHUD/DebugVals" method="_on_player_reload_started"]
